--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
         console.log('Listener starts here');
         window.addEventListener('sfgtm', function(event) {
             console.log('Listener started');
+            
                 console.log('Received event: ', event);
+                console.log('event.data: ', event.data);
                 console.log('event.data.name: ', event.data.name);
+            
                 dataLayer.push({
                     event: 'salesforce_event',
                     date: event.data.date,
