--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         window.addEventListener('sfgtm', function(event) {
             console.log('Listener started');
                 
-                console.log('Received event: ', JSON.stringify(event);
+                console.log('Received event: ', JSON.stringify(event));
                 console.log('event.data: ', event.data);
                 console.log('event.data.name: ', event.data.name);
             
