--- a/index.html
+++ b/index.html
@@ -38,13 +38,10 @@
 
     <!-- !!!! The most important part, this is an example of the listener that takes the event from Scheduler/Salesforce and reprocesses this to GTM / GA by publishing to the data layer -->
     <script>
-        console.log('Listener starts here');
-        window.addEventListener('sfgtm', function(event) {
-            console.log('Listener started');
-                console.log('Received event: ', JSON.stringify(event));
-                console.log('event.detail: ', event.detail);
-                console.log('event.detail.name: ', event.detail.name);
-                dataLayer.push(event.detail);
+        window.addEventListener('appointment', function(event) {
+            console.log('Received event: ', JSON.stringify(event));
+            console.log('event.detail: ', event.detail);
+            dataLayer.push(event.detail);
         });
     </script>
 
