Update phone number hover state

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             display: inline-flex !important;
         }
     </style>
-    <link rel="stylesheet" href="css/ergosleep.css">
+    <link rel="stylesheet" href="css/morgana.css">
 </head>
 <body>
     <script src="https://morgana2022--acceptance.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
