--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </script>
     <!-- End Google Tag Manager -->
 
-    <link rel="stylesheet" href="css/morgana.css">
+    <link rel="stylesheet" href="css/ergosleep.css">
 </head>
 
 
