--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Morgana Scheduler</title>
+    <title> Scheduler 2</title>
     <style>
         .slds-visual-picker_vertical .slds-visual-picker__figure {
             height: inherit !important;
