--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
     <!-- !!! This part is the scheduler snippet - here you need to pass the parameters -->
-    <script src="https://morgana2022--acceptance.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
+    <script src="https://nosoftware-business-5971.scratch.lightning.force.com/lightning/lightning.out.js"></script>
     <script>
         $Lightning.use("runtime_appointmentbooking:lightningOutGuest",    // name of the Lightning app
             function() {
@@ -81,7 +81,7 @@
                         cmp.startFlow("Inbound_New_Guest_Appointment_custom", inputVariables);
                     }
                 );
-            }, "https://morgana2022--acceptance.sandbox.my.site.com"  // Community endpoint
+            }, "https://nosoftware-business-5971.scratch.my.site.com"  // Community endpoint
         );
     </script>
 
