--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
     <!-- !!! This part is the scheduler snippet - here you need to pass the parameters -->
     <script src="https://business-saas-2332.scratch.lightning.force.com/lightning/lightning.out.js"></script>
     <script>
+
+         // Function to get URL parameter
+         function getURLParameter(name) {
+            var regex = new RegExp('[?&]' + name + '=([^&#]*)');
+            var results = regex.exec(window.location.search);
+            return results === null ? '' : decodeURIComponent(results[1].replace(/\+/g, ' '));
+        }
+
+        // Get the 'language' parameter, default to 'en' if not present
+        var language = getURLParameter('language') || 'en';
+        
+        // Construct the new URL
+        var lightningEndpoint = "https://morgana2022--acceptance.sandbox.my.site.com/" + language;
+
+
         $Lightning.use("runtime_appointmentbooking:lightningOutGuest",    // name of the Lightning app
             function() {
                 $Lightning.createComponent(
@@ -81,7 +96,7 @@
                         cmp.startFlow("Inbound_New_Guest_Appointment_custom", inputVariables);
                     }
                 );
-            }, "https://business-saas-2332.scratch.my.site.com/Scheduler2"  // Community endpoint
+            }, lightningEndpoint  // Community endpoint
         );
     </script>
 
