--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
     <!-- !!! This part is the scheduler snippet - here you need to pass the parameters -->
-    <script src="https://business-saas-2332.scratch.lightning.force.com/lightning/lightning.out.js"></script>
+    <script src="https://morgana2022--acceptance.sandbox.my.site.com/de"></script>
     <script>
 
          // Function to get URL parameter
