--- a/index2.html
+++ b/index2.html
@@ -48,7 +48,7 @@
 
 
     <!-- !!! This part is the scheduler snippet - here you need to pass the parameters -->
-    <script src="https://morgana2022--acceptance.sandbox.my.site.com/de/lightning/lightning.out.js"></script>
+    <script src="https://morgana2022--acceptance.sandbox.my.site.com/lightning/lightning.out.js"></script>
     <script>
 
          // Function to get URL parameter
