--- a/index2.html
+++ b/index2.html
@@ -102,7 +102,7 @@
                         cmp.startFlow("Inbound_New_Guest_Appointment_custom", inputVariables);
                     }
                 );
-            }, lightningEndpoint  // Community endpoint
+            }, "https://morgana2022--acceptance.sandbox.my.site.com/fr"  // Community endpoint
         );
     </script>
 
