--- a/language/fr.html
+++ b/language/fr.html
@@ -44,7 +44,7 @@
 
 
     <!-- !!! This part is the scheduler snippet - here you need to pass the parameters -->
-    <script src="https://morgana2022--acceptance.sandbox.my.site.com/fr/lightning/lightning.out.js"></script>
+    <script src="https://morgana2022--acceptance.sandbox.my.site.com/lightning/lightning.out.js"></script>
     <script>
         $Lightning.use("runtime_appointmentbooking:lightningOutGuest",    // name of the Lightning app
             function() {
