--- a/language/fr.html
+++ b/language/fr.html
@@ -81,7 +81,7 @@
                         cmp.startFlow("Inbound_New_Guest_Appointment_custom", inputVariables);
                     }
                 );
-            }, "https://morgana2022--acceptance.sandbox.my.site.com/fr/s"  // Community endpoint
+            }, "https://morgana2022--acceptance.sandbox.my.site.com/fr"  // Community endpoint
         );
     </script>
 
