--- a/language/de.html
+++ b/language/de.html
@@ -81,7 +81,7 @@
                         cmp.startFlow("Inbound_New_Guest_Appointment_custom", inputVariables);
                     }
                 );
-            }, "https://morgana2022--acceptance.sandbox.my.site.com/de"  // Community endpoint
+            }, "https://morgana2022--acceptance.sandbox.my.site.com/de?language=de"  // Community endpoint
         );
     </script>
 
