--- a/language/de.html
+++ b/language/de.html
@@ -72,6 +72,11 @@
                                     name : 'ext_page',
                                     type : 'String',
                                     value : 'https://oleg-mastriukov.github.io/scheduler2/'
+                                },
+                                {
+                                    name : 'ext_language',
+                                    type : 'String',
+                                    value : 'de'
                                 }
                                 ];
                         <!-- for ext_brand two values are expected: Morgana or Ergosleep -->
