--- a/language/nl.html
+++ b/language/nl.html
@@ -76,7 +76,7 @@
                                 {
                                     name : 'ext_language',
                                     type : 'String',
-                                    value : 'en'
+                                    value : 'nl'
                                 }
                                 ];
                         <!-- for ext_brand two values are expected: Morgana or Ergosleep -->
