--- a/test/language/en.html
+++ b/test/language/en.html
@@ -76,7 +76,7 @@
                                 {
                                     name : 'ext_language',
                                     type : 'String',
-                                    value : 'nl'
+                                    value : 'en'
                                 }
                                 ];
                         <!-- for ext_brand two values are expected: Morgana or Ergosleep -->
