--- a/prod/language/de.html
+++ b/prod/language/de.html
@@ -44,7 +44,7 @@
 
 
     <!-- !!! This part is the scheduler snippet - here you need to pass the parameters -->
-    <script src="https://morgana.my.site.com/de/lightning/lightning.out.js"></script>
+    <script src="https://morgana2022--test.sandbox.lightning.force.com/de/lightning/lightning.out.js"></script>
     <script>
         $Lightning.use("runtime_appointmentbooking:lightningOutGuest",    // name of the Lightning app
             function() {
@@ -86,7 +86,7 @@
                         cmp.startFlow("Inbound_New_Guest_Appointment_custom", inputVariables);
                     }
                 );
-            }, "https://morgana.my.site.com/de"  // Community endpoint
+            }, "	https://morgana2022--test.sandbox.my.site.com/de"  // Community endpoint
         );
     </script>
 
