--- a/prod/language/fr.html
+++ b/prod/language/fr.html
@@ -86,7 +86,7 @@
                         cmp.startFlow("Inbound_New_Guest_Appointment_custom", inputVariables);
                     }
                 );
-            }, "https://morgana.my.site.com/fr"  // Community endpoint
+            }, "https://morgana2022--test.sandbox.my.site.com/fr"  // Community endpoint
         );
     </script>
 
