--- a/prod/language/de.html
+++ b/prod/language/de.html
@@ -57,7 +57,7 @@
                                 {
                                     name : 'ext_brand',
                                     type : 'String',
-                                    value : 'Morgana'
+                                    value : 'Ergosleep'
                                 },
                                 {
                                     name : 'ext_client_id',
