--- a/test/language/en.html
+++ b/test/language/en.html
@@ -20,7 +20,7 @@
     </script>
     <!-- End Google Tag Manager -->
 
-    <link rel="stylesheet" href="/css/ergosleep.css">
+    <link rel="stylesheet" href="/scheduler/css/ergosleep.css">
 </head>
 
 
