--- a/test/language/de.html
+++ b/test/language/de.html
@@ -20,7 +20,7 @@
     </script>
     <!-- End Google Tag Manager -->
 
-    <link rel="stylesheet" href="css/ergosleep.css">
+    <link rel="stylesheet" href="/scheduler/css/ergosleep.css">
 </head>
 
 
@@ -71,7 +71,7 @@
                                 },                                {
                                     name : 'ext_page',
                                     type : 'String',
-                                    value : 'https://oleg-mastriukov.github.io/scheduler2/'
+                                    value : 'https://oleg-mastriukov.github.io/scheduler/'
                                 },
                                 {
                                     name : 'ext_language',
