--- a/test/language/en.html
+++ b/test/language/en.html
@@ -71,7 +71,7 @@
                                 },                                {
                                     name : 'ext_page',
                                     type : 'String',
-                                    value : 'https://oleg-mastriukov.github.io/scheduler2/'
+                                    value : 'https://oleg-mastriukov.github.io/scheduler/'
                                 },
                                 {
                                     name : 'ext_language',
