--- a/test/language/nl.html
+++ b/test/language/nl.html
@@ -86,7 +86,7 @@
                         cmp.startFlow("Inbound_New_Guest_Appointment_custom", inputVariables);
                     }
                 );
-            }, "https://morgana2022--test.sandbox.my.site.com/nl"  // Community endpoint
+            }, "https://morgana2022--acceptance.sandbox.my.site.com/nl"  // Community endpoint
         );
     </script>
 
