--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-<h1>The iframe element</h1>
-
-<iframe src="https://morgana2022--acceptance.sandbox.my.site.com/s/" title="Scheduler">
-</iframe>
-
-</body>
+  <body>
+  
+  <h1>The iframe element</h1>
+    <center>
+        <div>
+            <iframe style="width: 100%; height: 710px; overflow: auto;" src="https://morgana2022--acceptance.sandbox.my.site.com/s/" frameborder="0" width="320" height="240">
+            </iframe>
+        </div>
+    </center>
+  </body>
 </html>
