--- a/test/language/en.html
+++ b/test/language/en.html
@@ -77,6 +77,11 @@
                                     name : 'ext_language',
                                     type : 'String',
                                     value : 'en'
+                                },
+                                {
+                                    name : 'ext_is_test',
+                                    type : 'Boolean',
+                                    value : true
                                 }
                                 ];
                         <!-- for ext_brand two values are expected: Morgana or Ergosleep -->
