--- a/test/language/en.html
+++ b/test/language/en.html
@@ -81,7 +81,7 @@
                                 {
                                     name : 'ext_is_test',
                                     type : 'Boolean',
-                                    value : true
+                                    value : false
                                 }
                                 ];
                         <!-- for ext_brand two values are expected: Morgana or Ergosleep -->
